# Deadcode_Detector

./: .dockerignore  .env.docker  .env.docker.example  .gitignore  AGENTS.md  Caddyfile  DEPLOYMENT.md  README.md  docker-compose.dev.yml  docker-compose.prod.yml  package-lock.json  package.json  pyproject.toml  test_analysis.py  test_dead_code.py
Backend/: .dockerignore  Dockerfile  celerybeat-schedule  celerybeat-schedule-shm  celerybeat-schedule-wal  check_current_state.py  check_flat.py  check_new.py  check_new_subs.py  check_rag.py  check_rag_api.py  check_roles.py  check_scan_type.py  check_submissions_user1.py  check_user.py  check_user1_docs.py  debug_analysis.py  debug_error.html  debug_error2.html  delete_user1.py  disable_mfa.py  e2e_full_test.py  fix_db.py  gen_token.py  parse_error.py  reset_user1.py  test_cursor_type.py  test_debug.py  test_debug_login.py  test_direct.py  test_django_api.py  test_django_api2.py  test_django_api3.py  test_django_api4.py  test_params.py  test_psycopg2.py  test_rag_api.py  test_rag_api2.py  test_rag_api3.py  test_rag_api4.py  (+1 more)
Frontend/: .dockerignore  .env.example  API_SUMMARY.md  Dockerfile  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  playwright.config.ts  tsconfig.app.json  vite.config.js  vite.config.ts
extension/: background.js  manifest.json  popup.html  popup.js
ghostcode-analyzer/: .env.example
ghostcode-rag/: requirements.txt
nginx/: Dockerfile  nginx.conf  nginx.prod.conf
pgbouncer/: pgbouncer.ini.example  userlist.txt.example
scripts/: check_jobs.py  check_status.py  (+9 more)
(+191 files in other folders)
