[project]
name = "deadcode-detector"
requires-python = ">=3.14"

[tool.ruff]
target-version = "py314"
line-length = 120
src = ["Backend", "services"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "core.settings.dev"
pythonpath = ["Backend"]
testpaths = ["Backend"]
